tests/spec/fail/unknown_field.aja
type User:
    age: int

u = User(10)
print(u.name)
